--- a/css/article.css
+++ b/css/article.css
@@ -1,18 +1,31 @@
 .article {
     max-width: 700px;
     padding: 20px;
-    box-shadow: 2px 2px 8px darkgoldenrod;
-    margin: 20px auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .article__header {
-    color: brown;
+    color: white;
+    background-color: darkgoldenrod;
+    border: none;
+    border-radius: 10px;
 }
 
 .arcticle__paragraph {
     color: coral;
 }
 
-.article__paragraph--highlighted {
+.article__paragraph__highlighted {
     color:rgb(160, 116, 60);
+}
+
+.article__element {
+    color: white;
+    background-color: rgb(207, 175, 95);
+    border: none;
+    border-radius: 10px;
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
 }
